Não escondendo os chips da playlist

--- a/youtube.css
+++ b/youtube.css
@@ -227,11 +227,9 @@ ytd-browse[page-subtype='home'] #contents {
 }
 
 /* Remove chips when the sidebar is not minimized */
-tp-yt-app-drawer[opened] ~ ytd-page-manager #header ytd-feed-filter-chip-bar-renderer {
+tp-yt-app-drawer[opened] ~ ytd-page-manager #header ytd-feed-filter-chip-bar-renderer:not(:has(yt-dropdown-menu)) {
   display: none;
 }
-
-/* Remove chips when the sidebar is not minimized */
 #frosted-glass:has(~ tp-yt-app-drawer[opened]) {
   max-height: 56px;
 }
