--- a/youtube.css
+++ b/youtube.css
@@ -3,6 +3,15 @@
 */
 
 :root {
+  --textshortsreminder: 'Hover to see Shorts';
+
+  /* If you don't want a notification circle at the corner of your profile, change it to 0 */
+  --shownotificationcircle: 1;
+  /* If you don't want Shorts in video page to be hidden, change it to 1 */
+  --neverhideshorts: 0;
+  /* If you don't want the youtube header to be hidden, change it to 1 */
+  --neverhideheader: 0;
+
   --colorloadingpageprogress: linear-gradient(to left, rgb(255, 196, 0), red 40%, rgb(41, 0, 123));
   --colorvolumeleft: linear-gradient(45deg, rgb(50, 0, 151), rgb(142, 142, 255));
   --colorvolumeright: linear-gradient(45deg, rgb(168, 168, 255), rgb(50, 0, 151) 10%, rgb(24, 0, 71) 50%);
@@ -36,15 +45,6 @@
   --timeshortsopening: 0.2s;
   --timeheaderclosing: 0.1s;
   --timeheaderopening: 0.3s;
-
-  --textshortsreminder: 'Hover to see Shorts';
-
-  /* If you don't want a notification circle at the corner of your profile, change it to 0 */
-  --shownotificationcircle: 1;
-  /* If you don't want Shorts in video page to be hidden, change it to 1 */
-  --neverhideshorts: 0;
-  /* If you don't want the youtube header to be hidden, change it to 1 */
-  --neverhideheader: 0;
 }
 
 @keyframes animationcolorrainbow {
@@ -426,7 +426,7 @@ ytd-playlist-panel-renderer#playlist > #container {
 #items ytd-reel-shelf-renderer #title-container::after {
   content: var(--textshortsreminder);
   font-size: 12px;
-  filter: opacity(100%);
+  filter: opacity(calc(100% + -100% * var(--neverhideshorts)));
   transition-duration: 0.6s;
   transition-property: filter;
   transition-delay: var(--timeshortsclosing);
