Fix icone relogio aparecendo na home

--- a/youtube.css
+++ b/youtube.css
@@ -573,7 +573,7 @@ yt-dynamic-sizing-formatted-string:not([hidden]) #text {
 
 /* Last updated message */
 .ytd-grid-playlist-renderer #metadata-line span::before,
-.yt-content-metadata-view-model-wiz.yt-content-metadata-view-model-wiz--medium-text div:nth-child(2):nth-last-child(2) span::before {
+.yt-content-metadata-view-model-wiz.yt-content-metadata-view-model-wiz--medium-text div:nth-child(2):nth-last-child(2):not(:has(.yt-content-metadata-view-model-wiz__delimiter)) span::before {
   background-image: var(--imgclockicon);
   filter: invert(1);
   background-size: 12px 12px;
